--- a/src/main/webapp/app/entities/advisory/advisory-detail.component.html
+++ b/src/main/webapp/app/entities/advisory/advisory-detail.component.html
@@ -38,7 +38,7 @@
                 </dd>
                 <dt><span jhiTranslate="demoApp.advisory.user">User</span></dt>
                 <dd>
-                    {{ advisory.user?.login }}
+                    {{ advisory.user?.id }}
                 </dd>
             </dl>
 
