--- a/src/main/webapp/app/entities/advisory/advisory.component.html
+++ b/src/main/webapp/app/entities/advisory/advisory.component.html
@@ -49,7 +49,7 @@
                         {{ advisory.proposer?.id }}
                     </td>
                     <td>
-                        {{ advisory.user?.login }}
+                        {{ advisory.user?.id }}
                     </td>
                     <td class="text-right">
                         <div class="btn-group">
